2013-02-23  Peter Kleiweg  <p.c.j.kleiweg@rug.nl>

	* progmodes/ps-mode.el (ps-mode-version): Bump to 1.1i.
	(ps-mode-octal-region): Use string-make-unibyte.

2013-02-23  Glenn Morris  <rgm@gnu.org>

	* emulation/viper-cmd.el (viper-submit-report):
	* progmodes/ps-mode.el (ps-mode-maintainer-address):
	* progmodes/vera-mode.el (vera-mode-help-address):
	* textmodes/artist.el (artist-maintainer-address):
	* textmodes/reftex.el (reftex-report-bug):
	* vc/ediff-util.el (ediff-submit-report):
	Add bug-gnu-emacs to bug report address.

	* progmodes/simula.el (simula-mode-menu, simula-mode-map):
	Remove bug report entries.
	(simula-mode-help-address, simula-submit-bug-report): Make obsolete.

	* emacs-lisp/bytecomp.el (byte-compile-level): New.
	(byte-compile-file, byte-compile-from-buffer):
	Use separate input/output buffers for each level of recursive
	byte-compile-file calls.  (Bug#13787)

2013-02-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods): Fix docstring.
	(tramp-ssh-controlmaster-options): Rename it from
	`tramp-ssh-controlmaster-template'.  Return a string.
	(tramp-default-method): Adapt check for
	`tramp-ssh-controlmaster-options'.

	* net/tramp-sh.el (tramp-methods): Replace
	`tramp-ssh-controlmaster-template' by "%c".
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection): Use it in format spec.  Ensure,
	that it is applied for the first hop only.

2013-02-22  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-lazy-highlight-new-loop):
	Set `isearch-lazy-highlight-start' and `isearch-lazy-highlight-end'
	to `isearch-other-end' if it is not nil.  (Bug#13402)

	* replace.el (replace-highlight): Let-bind `isearch-other-end'
	to `match-beg'.

	* textmodes/ispell.el (ispell-highlight-spelling-error-overlay):
	Let-bind `isearch-other-end' to `start', `isearch-forward' to t
	and `isearch-error' to nil.

2013-02-22  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-tramp-file-p): Fix docstring.
