@@ -1,3 +1,12 @@
+2013-02-24  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-ext.el (math-to-radians-2, math-from-radians-2):
+	Add option to force `pi' to remain symbolic.
+	* calc/calcalg2.el (calcFunc-sin, calcFunc-cos, calcFunc-tan)
+	(calcFunc-cot, calcFunc-csc, calcFunc-sec, calcFunc-arcsin)
+	(calcFunc-arccos, calcFunc-arctan): Use symbolic `pi' in the
+	derivatives, when necessary.
+
 2013-02-23  Peter Kleiweg  <p.c.j.kleiweg@rug.nl>
 
 	* progmodes/ps-mode.el (ps-mode-version): Bump to 1.1i.
